Notifications panel, Multiplayer files

--- a/application/modules/sudoku/views/scripts/layout.phtml
+++ b/application/modules/sudoku/views/scripts/layout.phtml
@@ -34,6 +34,7 @@ $this->headScript()
 <body class="<?php echo $this->pageCode; ?>">
 
 <?php echo $this->render('_extra/navigation.phtml'); ?>
+<?php echo $this->render('_extra/system-notifications.phtml'); ?>
 
 <div class="main-container" id="main-container">
     <div class="left-column">
