--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -12,6 +12,7 @@
 @import "navigation-panel";
 @import "login-register-modal";
 @import "server";
+@import "system-notifications";
 @import "user-games-history";
 @import "users-rating";
 
