--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -161,5 +161,20 @@
 
 @login-modal-register-container-width: @login-modal-container-width;
 
+// System notifications panel
+@system-notifications-system-notifications-panel-width: 500px;
+@system-notifications-system-notifications-panel-height: @navigation-panel-navigation-panel-height;
+@system-notifications-system-notifications-panel-background-color: @navigation-panel-navigation-panel-background-color;
+@system-notifications-system-notifications-panel-border: @navigation-panel-navigation-panel-border-bottom;
+@system-notifications-system-notifications-panel-gradient-start: @navigation-panel-navigation-panel-gradient-start;
+@system-notifications-system-notifications-panel-gradient-end: @navigation-panel-navigation-panel-background-color;
+
+@system-notifications-system-notifications-panel-system-notifications-container-padding-top: @navigation-panel-navigation-panel-padding-top;
+@system-notifications-system-notifications-panel-system-notifications-container-padding-right: 10px;
+@system-notifications-system-notifications-panel-system-notifications-container-padding-bottom: @navigation-panel-navigation-panel-padding-bottom;
+@system-notifications-system-notifications-panel-system-notifications-container-padding-left: @system-notifications-system-notifications-panel-system-notifications-container-padding-right;
+@system-notifications-system-notifications-panel-padding: @system-notifications-system-notifications-panel-system-notifications-container-padding-top @system-notifications-system-notifications-panel-system-notifications-container-padding-right @system-notifications-system-notifications-panel-system-notifications-container-padding-bottom @system-notifications-system-notifications-panel-system-notifications-container-padding-left;
+@system-notifications-system-notifications-panel-system-notifications-container-gradient-start: #cdbeb1;
+@system-notifications-system-notifications-panel-system-notifications-container-gradient-end: #a99d8f;
 
 
