--- a/application/modules/sudoku/views/scripts/_partials/user-block.phtml
+++ b/application/modules/sudoku/views/scripts/_partials/user-block.phtml
@@ -17,30 +17,32 @@
     }
 
 ?>
-<div class="user-info-block user-menu-closed">
-    <div class="user-info-title-container">
-        <span class="user-info-title">
-            Привет, <?php echo $greeting; ?>.
-            <?php if (!isset($user['role_id']) || $user['role_id'] == Application_Service_User::ROLE_GUEST): ?>
-                Может <a href="" class="login-button">залогинишься</a>?
-            <?php endif; ?>
-            <i class="user-menu-open-icon icon-chevron-down"></i>
-            <i class="user-menu-close-icon icon-chevron-up"></i>
-        </span>
-    </div>
-    <div class="user-menu-container">
-        <div class="user-menu">
-            <ul class="unstyled">
-                <li>
-                    <a href="">что-то</a>
-                </li>
-                <li>
-                    <a href="">что-то еще</a>
-                </li>
-                <li class="logout">
-                    <a href="/user/logout">Разлогиниться</a>
-                </li>
-            </ul>
+<div class="user-block">
+    <div class="user-info-block user-menu-closed">
+        <div class="user-info-title-container">
+            <span class="user-info-title">
+                Привет, <?php echo $greeting; ?>.
+                <?php if (!isset($user['role_id']) || $user['role_id'] == Application_Service_User::ROLE_GUEST): ?>
+                    Может <a href="" class="login-button">залогинишься</a>?
+                <?php endif; ?>
+                <i class="user-menu-open-icon icon-chevron-down"></i>
+                <i class="user-menu-close-icon icon-chevron-up"></i>
+            </span>
+        </div>
+        <div class="user-menu-container">
+            <div class="user-menu">
+                <ul class="unstyled">
+                    <li>
+                        <a href="">что-то</a>
+                    </li>
+                    <li>
+                        <a href="">что-то еще</a>
+                    </li>
+                    <li class="logout">
+                        <a href="/user/logout">Разлогиниться</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
